# sentry-telegram-proxy

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  runapp
config/: config.dev.yaml
sentry_telegram_proxy/: api.py  app.py
sentry_telegram_proxy/containers/: __init__.py  app.py  core.py
sentry_telegram_proxy/exceptions/: __init__.py  base.py  not_found.py  unauthorized.py
sentry_telegram_proxy/routers/: sentry.py
sentry_telegram_proxy/schemas/: payload.py
sentry_telegram_proxy/services/: __init__.py  sentry.py  telegram.py
tests/: test_sentry_telegram_proxy.py
