[tool.poetry]
name = "sentry-telegram-proxy"
version = "0.1.0"
description = ""
authors = ["AATrubilin <aatrubilin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pre-commit = "^2.19.0"
isort = "^5.10.1"
mypy = "^0.961"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
